--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "components-font-awesome": "^4.5.0",
-    "Materialize": "materialize#^0.97.5"
+    "Materialize": "materialize#^0.97.5",
+    "angular-resource": "^1.5.0"
   }
 }
