--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
-    "mongoose": "^4.4.4"
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
