--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "mongoose": "^4.4.4",
+    "nodemailer": "^2.3.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "xoauth2": "^1.1.0"
   }
 }
